--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="/assets/tv.png" alt="tv icon">
+                <img src="assets/tv.png" alt="tv icon">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="/assets/computador.png" alt="computer icon">
+                <img src="assets/computador.png" alt="computer icon">
                 <h3 class="lista__item">Computadores</h3>
             </li>
             <li>
-                <img src="/assets/celular.png" alt="phone icon">
+                <img src="assets/celular.png" alt="phone icon">
                 <h3 class="lista__item">Celulares e tablets</h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="/assets/Logo.png" alt="Logo alura" class="rodape__logo">
+        <img src="assets/Logo.png" alt="Logo alura" class="rodape__logo">
 
         <ul class="rodape__lista">
             <li class="lista__link">
